syntax = "proto3";

package video;

option go_package = "video_proto";

service VideoService {
    rpc Ping(EmptyRequest) returns (PingResponse);
	rpc GetVideo(VideoRequest) returns (VideoResponse);
}

message EmptyRequest {}

message PingResponse {
    string message = 1;
}

message VideoRequest {
	string session_id = 1;
}

message VideoResponse {
	string video_url = 1;
}
